# Aerial-Manipulator-Gazebo

./: CMakeLists.txt  README.md  package.xml
config/: j2s7s300_control.yaml
launch/: aerial_manipulator.launch  pick_weight.launch  robot_teleop.launch  spawn_mav.launch  uav_teleop.launch
meshes/: black_propeller.stl  hand_3finger_new.STL  hand_3finger_new.dae
src/: controller.cpp  gear_joint_sensor.cpp  robot_teleop_node.cpp  uav_teleop_node.cpp
urdf/: harrierD7.xacro  harrierD7_base.xacro  j2s7s300.xacro  kinova_common.xacro  kinova_finger_set.xacro  kinova_inertial.xacro  landing_gear.xacro  landing_part.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base_harrier.xacro
worlds/: basic.world  pick_weight.world
