<?xml version="1.0"?>
<package format="2">
  <name>aerial_manipulation</name>
  <version>0.0.0</version>
  <description>Gazebo Aerial Manipulator</description>

  <maintainer email="dimitris.chaikalis@nyu.edu">Dimitris Chaikalis</maintainer>

  <license>GNU</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
